ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.8
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 15 (06/03/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Attempting to create a collection with the "simple" collation:

      > db.createCollection("foo",{collation:{locale:"simple"}})
      2016-06-02T17:18:21.203-0400 E QUERY    [thread1] Error: error doing query: failed: network error while attempting to run command 'create' on host '127.0.0.1:27017'  :
      

      Stack trace produced:

      2016-06-02T17:18:21.002-0400 F -        [conn1] Invalid access at address: 0x10
      2016-06-02T17:18:21.047-0400 F -        [conn1] Got signal: 11 (Segmentation fault).
      
       0x2ccf591 0x2cce606 0x2cceb11 0x7f7b10cbf340 0x3c60ac0 0x211c4fc 0x26b496d 0x22b2a34 0x22a316a 0x23a2cf6 0x239f7e4 0x239e43e 0x28d8188 0x2519fc4 0x251c5f5 0x211e4e1 0x2c898b7 0x7f7b10cb7182 0x7f7b109e430d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"28CF591","s":"_ZN5mongo15printStackTraceERSo"},{"b":"400000","o":"28CE606"},{"b":"400000","o":"28CEB11"},{"b":"7F7B10CAF000","o":"10340"},{"b":"400000","o":"3860AC0","s":"_ZNKSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEE4sizeEv"},{"b":"400000","o":"1D1C4FC","s":"_ZN5mongo14BSONObjBuilder6appendENS_10StringDataERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE"},{"b":"400000","o":"22B496D","s":"_ZN5mongo19CollationSerializer10specToBSONERKNS_13CollationSpecE"},{"b":"400000","o":"1EB2A34","s":"_ZN5mongo12userCreateNSEPNS_16OperationContextEPNS_8DatabaseENS_10StringDataENS_7BSONObjEb"},{"b":"400000","o":"1EA316A","s":"_ZN5mongo16createCollectionEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERKNS_7BSONObjE"},{"b":"400000","o":"1FA2CF6","s":"_ZN5mongo9CmdCreate3runEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERNS_7BSONObjEiRS8_RNS_14BSONObjBuilderE"},{"b":"400000","o":"1F9F7E4","s":"_ZN5mongo7Command3runEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS3_21ReplyBuilderInterfaceE"},{"b":"400000","o":"1F9E43E","s":"_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_RKNS_3rpc16RequestInterfaceEPNS4_21ReplyBuilderInterfaceE"},{"b":"400000","o":"24D8188","s":"_ZN5mongo11runCommandsEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS2_21ReplyBuilderInterfaceE"},{"b":"400000","o":"2119FC4"},{"b":"400000","o":"211C5F5","s":"_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE"},{"b":"400000","o":"1D1E4E1","s":"_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortE"},{"b":"400000","o":"28898B7","s":"_ZN5mongo17PortMessageServer17handleIncomingMsgEPv"},{"b":"7F7B10CAF000","o":"8182"},{"b":"7F7B108E9000","o":"FB30D","s":"clone"}],"processInfo":{ "mongodbVersion" : "0.0.0", "gitVersion" : "none", "compiledModules" : [], "uname" : { "sysname" : "Linux", "release" : "3.13.0-24-generic", "version" : "#46-Ubuntu SMP Thu Apr 10 19:11:08 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "59C05838F7985EBD38B528E08891570FADA17220" }, { "b" : "7FFFDC2FE000", "elfType" : 3, "buildId" : "6755FAD2CADACDF1667E5B57FF1EDFC28DD1C976" }, { "b" : "7F7B115ED000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "92FCF41EFE012D6186E31A59AD05BDBB487769AB" }, { "b" : "7F7B113E9000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "C1AE4CB7195D337A77A3C689051DABAA3980CA0C" }, { "b" : "7F7B110E3000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "574C6350381DA194C00FF555E0C1784618C05569" }, { "b" : "7F7B10ECD000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "CC0D578C2E0D86237CA7B0CE8913261C506A629A" }, { "b" : "7F7B10CAF000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "FE662C4D7B14EE804E0C1902FB55218A106BC5CB" }, { "b" : "7F7B108E9000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "B571F83A8A6F5BB22D3558CDDDA9F943A2A67FD1" }, { "b" : "7F7B117F5000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "9F00581AB3C73E3AEA35995A0C50D24D59A01D47" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x27) [0x2ccf591]
       mongod(+0x28CE606) [0x2cce606]
       mongod(+0x28CEB11) [0x2cceb11]
       libpthread.so.0(+0x10340) [0x7f7b10cbf340]
       mongod(_ZNKSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEE4sizeEv+0x0) [0x3c60ac0]
       mongod(_ZN5mongo14BSONObjBuilder6appendENS_10StringDataERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE+0x2E) [0x211c4fc]
       mongod(_ZN5mongo19CollationSerializer10specToBSONERKNS_13CollationSpecE+0x71) [0x26b496d]
       mongod(_ZN5mongo12userCreateNSEPNS_16OperationContextEPNS_8DatabaseENS_10StringDataENS_7BSONObjEb+0x3AB) [0x22b2a34]
       mongod(_ZN5mongo16createCollectionEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERKNS_7BSONObjE+0x5BF) [0x22a316a]
       mongod(_ZN5mongo9CmdCreate3runEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERNS_7BSONObjEiRS8_RNS_14BSONObjBuilderE+0xFE) [0x23a2cf6]
       mongod(_ZN5mongo7Command3runEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS3_21ReplyBuilderInterfaceE+0xF34) [0x239f7e4]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_RKNS_3rpc16RequestInterfaceEPNS4_21ReplyBuilderInterfaceE+0xACC) [0x239e43e]
       mongod(_ZN5mongo11runCommandsEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS2_21ReplyBuilderInterfaceE+0x4F2) [0x28d8188]
       mongod(+0x2119FC4) [0x2519fc4]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x5E1) [0x251c5f5]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortE+0x103) [0x211e4e1]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x416) [0x2c898b7]
       libpthread.so.0(+0x8182) [0x7f7b10cb7182]
       libc.so.6(clone+0x6D) [0x7f7b109e430d]
      -----  END BACKTRACE  -----
      

      Attempting to create an index with the "simple" collation:

      > db.foo.ensureIndex({a:1},{collation:{locale:"simple"}})
      2016-06-02T17:19:51.243-0400 E QUERY    [thread1] Error: error doing query: failed: network error while attempting to run command 'createIndexes' on host '127.0.0.1:27017'  :
      

      Stack trace produced:

      2016-06-02T17:19:51.031-0400 F -        [conn1] Invalid access at address: 0x10
      2016-06-02T17:19:51.082-0400 F -        [conn1] Got signal: 11 (Segmentation fault).
      
       0x2ccf591 0x2cce606 0x2cceb11 0x7fdf36af3340 0x3c60ac0 0x211c4fc 0x26b496d 0x22c2934 0x22bc13e 0x22ca897 0x22f5781 0x239f7e4 0x239e43e 0x28d8188 0x2519fc4 0x251c5f5 0x211e4e1 0x2c898b7 0x7fdf36aeb182 0x7fdf3681830d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"28CF591","s":"_ZN5mongo15printStackTraceERSo"},{"b":"400000","o":"28CE606"},{"b":"400000","o":"28CEB11"},{"b":"7FDF36AE3000","o":"10340"},{"b":"400000","o":"3860AC0","s":"_ZNKSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEE4sizeEv"},{"b":"400000","o":"1D1C4FC","s":"_ZN5mongo14BSONObjBuilder6appendENS_10StringDataERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE"},{"b":"400000","o":"22B496D","s":"_ZN5mongo19CollationSerializer10specToBSONERKNS_13CollationSpecE"},{"b":"400000","o":"1EC2934","s":"_ZN5mongo12IndexCatalog13_fixIndexSpecEPNS_16OperationContextEPNS_10CollectionERKNS_7BSONObjE"},{"b":"400000","o":"1EBC13E","s":"_ZNK5mongo12IndexCatalog20prepareSpecForCreateEPNS_16OperationContextERKNS_7BSONObjE"},{"b":"400000","o":"1ECA897","s":"_ZNK5mongo15MultiIndexBlock21removeExistingIndexesEPSt6vectorINS_7BSONObjESaIS2_EE"},{"b":"400000","o":"1EF5781","s":"_ZN5mongo14CmdCreateIndex3runEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERNS_7BSONObjEiRS8_RNS_14BSONObjBuilderE"},{"b":"400000","o":"1F9F7E4","s":"_ZN5mongo7Command3runEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS3_21ReplyBuilderInterfaceE"},{"b":"400000","o":"1F9E43E","s":"_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_RKNS_3rpc16RequestInterfaceEPNS4_21ReplyBuilderInterfaceE"},{"b":"400000","o":"24D8188","s":"_ZN5mongo11runCommandsEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS2_21ReplyBuilderInterfaceE"},{"b":"400000","o":"2119FC4"},{"b":"400000","o":"211C5F5","s":"_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE"},{"b":"400000","o":"1D1E4E1","s":"_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortE"},{"b":"400000","o":"28898B7","s":"_ZN5mongo17PortMessageServer17handleIncomingMsgEPv"},{"b":"7FDF36AE3000","o":"8182"},{"b":"7FDF3671D000","o":"FB30D","s":"clone"}],"processInfo":{ "mongodbVersion" : "0.0.0", "gitVersion" : "none", "compiledModules" : [], "uname" : { "sysname" : "Linux", "release" : "3.13.0-24-generic", "version" : "#46-Ubuntu SMP Thu Apr 10 19:11:08 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "59C05838F7985EBD38B528E08891570FADA17220" }, { "b" : "7FFF192FA000", "elfType" : 3, "buildId" : "6755FAD2CADACDF1667E5B57FF1EDFC28DD1C976" }, { "b" : "7FDF37421000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "92FCF41EFE012D6186E31A59AD05BDBB487769AB" }, { "b" : "7FDF3721D000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "C1AE4CB7195D337A77A3C689051DABAA3980CA0C" }, { "b" : "7FDF36F17000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "574C6350381DA194C00FF555E0C1784618C05569" }, { "b" : "7FDF36D01000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "CC0D578C2E0D86237CA7B0CE8913261C506A629A" }, { "b" : "7FDF36AE3000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "FE662C4D7B14EE804E0C1902FB55218A106BC5CB" }, { "b" : "7FDF3671D000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "B571F83A8A6F5BB22D3558CDDDA9F943A2A67FD1" }, { "b" : "7FDF37629000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "9F00581AB3C73E3AEA35995A0C50D24D59A01D47" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x27) [0x2ccf591]
       mongod(+0x28CE606) [0x2cce606]
       mongod(+0x28CEB11) [0x2cceb11]
       libpthread.so.0(+0x10340) [0x7fdf36af3340]
       mongod(_ZNKSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEE4sizeEv+0x0) [0x3c60ac0]
       mongod(_ZN5mongo14BSONObjBuilder6appendENS_10StringDataERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE+0x2E) [0x211c4fc]
       mongod(_ZN5mongo19CollationSerializer10specToBSONERKNS_13CollationSpecE+0x71) [0x26b496d]
       mongod(_ZN5mongo12IndexCatalog13_fixIndexSpecEPNS_16OperationContextEPNS_10CollectionERKNS_7BSONObjE+0x564) [0x22c2934]
       mongod(_ZNK5mongo12IndexCatalog20prepareSpecForCreateEPNS_16OperationContextERKNS_7BSONObjE+0xBE) [0x22bc13e]
       mongod(_ZNK5mongo15MultiIndexBlock21removeExistingIndexesEPSt6vectorINS_7BSONObjESaIS2_EE+0x79) [0x22ca897]
       mongod(_ZN5mongo14CmdCreateIndex3runEPNS_16OperationContextERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERNS_7BSONObjEiRS8_RNS_14BSONObjBuilderE+0x1089) [0x22f5781]
       mongod(_ZN5mongo7Command3runEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS3_21ReplyBuilderInterfaceE+0xF34) [0x239f7e4]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_RKNS_3rpc16RequestInterfaceEPNS4_21ReplyBuilderInterfaceE+0xACC) [0x239e43e]
       mongod(_ZN5mongo11runCommandsEPNS_16OperationContextERKNS_3rpc16RequestInterfaceEPNS2_21ReplyBuilderInterfaceE+0x4F2) [0x28d8188]
       mongod(+0x2119FC4) [0x2519fc4]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x5E1) [0x251c5f5]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortE+0x103) [0x211e4e1]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x416) [0x2c898b7]
       libpthread.so.0(+0x8182) [0x7fdf36aeb182]
       libc.so.6(clone+0x6D) [0x7fdf3681830d]
      -----  END BACKTRACE  -----
      

            Assignee:
            J Rassi (Inactive)
            Reporter:
            J Rassi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: