SERVER-24380 Fix null deref. with coll/index having "simple" collation