src/mongo/db/catalog/index_catalog.cpp
@@ -1315,7 +1315,17 @@ StatusWith<BSONObj> IndexCatalog::_fixIndexSpec(OperationContext* txn,
             return collator.getStatus();
         }
 
-        b.append("collation", CollationSerializer::specToBSON(collator.getValue()->getSpec()));
+        // If the collator factory returned a non-null collator, set the collation option to the
+        // result of serializing the collator's spec back into BSON. We do this in order to fill in
+        // all options that the user omitted.
+        //
+        // If the collator factory returned a null collator (representing the "simple" collation),
+        // we can't use the collation serializer. In this case, we simply set the collation option
+        // to the original user BSON.
+        b.append("collation",
+                 collator.getValue()
+                     ? CollationSerializer::specToBSON(collator.getValue()->getSpec())
+                     : collationElt.Obj());
     } else if (collection->getDefaultCollator()) {
         // The user did not specify an explicit collation for this index and the collection has a
         // default collator. In this case, the index inherits the collection default.
